--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "cookie-parser": "1.4.6",
     "cron": "3.0.0",
     "crypto": "1.0.1",
+    "crypto-js": "^4.2.0",
     "ethers": "6.9.0",
     "ioredis": "5.3.2",
     "jsonwebtoken": "9.0.2",
