--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/cache-manager": "4.0.2",
     "@types/cookie-parser": "1.4.3",
     "@types/cron": "2.0.1",
+    "@types/crypto-js": "^4.2.1",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.1",
     "@types/js-yaml": "4.0.5",
